--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "@mui/material": "^7.3.5",
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide": "^4.1.4",
+    "@tailwindcss/vite": "^4.1.17",
     "lucide-react": "^0.554.0",
     "motion": "^12.23.24",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.9.6"
+    "react-router-dom": "^7.9.6",
+    "tailwindcss": "^4.1.17",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
